# hydroloom-ai

./: .gitignore  ANALYSIS.md  CONTRIBUTION.md  README.md  pyproject.toml  requirements.txt  sandbox.py  setup.py
data/processed/: north_final.parquet  south_final.parquet
figures/behavior_clustering/: summary.csv
models/: kmeans_south_k4.joblib
notebooks/: bivariate-analysis.ipynb  cluster_analysis.ipynb  data_generation.ipynb  load_data.ipynb  multivariate-analysis.ipynb  multivariate_analysis.ipynb  univariate-analysis.ipynb  univariate_analysis.ipynb
notebooks/behavior_clustering/: multivariate_analysis.ipynb  univariate_analysis.ipynb
notebooks/ul/: data_generation.ipynb
scripts/: config.py  core.py  environmental_simulator.py  gen_data.py  gen_data_unsupervised.py  global_init.py  household_demographic_simulator.py  params.py  preprocess.py  run_feature_engineering.py  setup.py  ul_core.py  utils.py
scripts/behavior_clustering/: gen_data.py  run_feature_engineering.py
scripts/sims/: cluster.py  environment.py  household.py  interactions.py  macro_behavior.py  precipitation.py  runoff.py  wqi.py
scripts/tests/: cluster.py  conftest.py  interactions.py  macro_behavior.py  precipitation.py  runoff.py  wqi.py
scripts/ul/: config.py  environmental_simulator.py  gen_data.py  global_init.py  household_demographic_simulator.py  ul_core.py
services/wqi_predictor/: config.py  preprocess.py  seeding.py  tracking.py
src/data/: environmental_simulator.py  global_init.py  household_demographic_simulator.py  ul_core.py
tests/: conftest.py  preprocess.py
(+27 files in other folders)
